tests/baselines/reference/for-of30.errors.txt
for-of30.ts(16,15): error TS2767: The 'return' property of an iterator must be a method.


==== for-of30.ts (1 errors) ====
    class MyStringIterator {
        next() {
            return {
                done: false,
                value: ""
            }
        }
    
        return = 0;
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    for (var v of new MyStringIterator) { }
                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2767: The 'return' property of an iterator must be a method.